--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-rust/hash/target/
-rust/hola_mundo/target/
-rust/operators/target/
-rust/scope/target/
-rust/tipos/target/
-rust/vars/target/
+rust/*/target/
+rust/*/Cargo.lock
